Source from robots.txt

--- a/src/main/resources/templates/console.html
+++ b/src/main/resources/templates/console.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>{{title}}</title>
+		<title>Spring Boot log viewer</title>
 		
 		<script src="webjars/sockjs-client/0.3.4-1/sockjs.min.js"></script>
         <script src="webjars/stomp-websocket/2.3.1-1/stomp.min.js"></script>
@@ -10,8 +10,7 @@
 	</head>
 	<body>
 		<noscript><h2>Enable Java script and reload this page to run Websocket Demo</h2></noscript>
-		<h1>Spring 4 WebSocket</h1>
-		<div>{{message}} at {{time}}</div>
+		<h1>Spring Boot log viewer</h1>
 		<p id="info"></p>
 	  	<p id="tail"></p>
 	  	
